source/tnn/device/cuda/thirdparty/cub/test/test_fail.cu
int main()
{
  static_assert(false, "fail one"); // expected-error {{"fail one"}}
}
